--- a/force-app/main/default/lwc/feedItemRegular/feedItemRegular.html
+++ b/force-app/main/default/lwc/feedItemRegular/feedItemRegular.html
@@ -2,14 +2,14 @@
 
 
         <div class="feed-container">
-            <div class="img-container" style={backgroundVar}>
+            <div class="img-container" style={image}>
                 <span>{type}</span>
             </div>
             <div class="content">
                 <div class="header">
                     <h2 class="header-left">{title}</h2>
                     <div class="header-right">
-                        <span>Posted {days} days ago</span>
+                        <span>Posted {sourceDate} days ago</span>
                         <span class="source">{sourceName}</span>
                     </div>
                 </div>
