Completed test drive form

--- a/force-app/main/default/lwc/amfTestDriveLocation/amfTestDriveLocation.html
+++ b/force-app/main/default/lwc/amfTestDriveLocation/amfTestDriveLocation.html
@@ -9,7 +9,7 @@
                     <div class="slds-media__figure slds-media__figure_fixed-width slds-align_absolute-center slds-m-left_xx-small">
                         <span class="slds-icon_container slds-icon-utility-knowledge_base">
                             <svg class="slds-icon slds-icon-text-default" aria-hidden="true">
-                            <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#home"></use>
+                            <use xlink:href={iconHome}></use>
                             </svg>
                         </span>
                         </div>
@@ -20,7 +20,7 @@
                     </span>
                     <span class="slds-icon_container slds-visual-picker__text-check">
                     <svg class="slds-icon slds-icon-text-check slds-icon_x-small" aria-hidden="true">
-                        <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#check"></use>
+                        <use xlink:href={iconCheck}></use>
                     </svg>
                     </span>
                 </label>
@@ -33,7 +33,7 @@
                     <div class="slds-media__figure slds-media__figure_fixed-width slds-align_absolute-center slds-m-left_xx-small">
                         <span class="slds-icon_container slds-icon-utility-knowledge_base">
                         <svg class="slds-icon slds-icon-text-default" aria-hidden="true">
-                            <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#travel_and_places"></use>
+                            <use xlink:href={iconDealer}></use>
                         </svg>
                         </span>
                     </div>
@@ -44,7 +44,7 @@
                 </span>
                 <span class="slds-icon_container slds-visual-picker__text-check">
                     <svg class="slds-icon slds-icon-text-check slds-icon_x-small" aria-hidden="true">
-                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#check"></use>
+                    <use xlink:href={iconCheck}></use>
                     </svg>
                 </span>
                 </label>
