--- a/force-app/main/default/lwc/amfVehicleChoice/amfVehicleChoice.html
+++ b/force-app/main/default/lwc/amfVehicleChoice/amfVehicleChoice.html
@@ -10,13 +10,13 @@
         <div class="slds-col">
          <div class="choiceCol selectedChoice" data-id="img1" onclick={handleChoice}>
              <div class="imgCon" style={img1}></div> 
-             <h3>Model 1</h3>
+             <h3>{model1}</h3>
            </div>
         </div>
          <div class="slds-col">
            <div class="choiceCol drinkcard-cc" data-id="img2" onclick={handleChoice}>
              <div class="imgCon" style={img2}></div> 
-             <h3>Model 2</h3>
+             <h3>{model2}</h3>
            </div>
           
            
@@ -24,7 +24,7 @@
          <div class="slds-col">
          <div class="choiceCol drinkcard-cc" data-id="img3" onclick={handleChoice}>
              <div class="imgCon " style={img3}></div> 
-             <h3>Model 3</h3>
+             <h3>{model3}</h3>
            </div>
         </div>
       </div>
