Add comments to test drive components

--- a/force-app/main/default/lwc/amfTestDriveForm/amfTestDriveForm.html
+++ b/force-app/main/default/lwc/amfTestDriveForm/amfTestDriveForm.html
@@ -14,7 +14,7 @@
             <div aria-hidden="false" class="slds-section__content" >
                 <div class="sectionContent">
                     <c-amf-vehicle-choice
-                    class="this.template.querySelector('.testDriveTime').value"
+                    class="vehicleChoiceCmp"
                     model1={model1}
                     model2={model2}
                     model3={model3}>
