--- a/force-app/main/default/lwc/afHomeButton/afHomeButton.html
+++ b/force-app/main/default/lwc/afHomeButton/afHomeButton.html
@@ -1,3 +1,5 @@
 <template>
-    <lightning-button variant="brand" label="Go to testdrive" onclick={openHome}></lightning-button>
+    <div class="container">
+        <lightning-button class="slds-align_absolute-center slds-m-top_xx-large" variant="brand" label="Go to testdrive" onclick={openHome}></lightning-button>
+    </div>
 </template>
